rest/rest-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  replicas: 1
  selector:
    matchLabels: { app: rest }
  template:
    metadata:
      labels: { app: rest }
    spec:
      containers:
        - name: rest
          image: graysonrichard/music-rest:v1
          ports: [{ containerPort: 5000 }]
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "250m", memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector: { app: rest }
  type: NodePort
  ports:
    - name: http
      port: 5000
      targetPort: 5000
